@@ -9,7 +9,9 @@
  *                         University of Stuttgart.  All rights reserved.
  * Copyright (c) 2004-2005 The Regents of the University of California.
  *                         All rights reserved.
- * Copyright (c) 2006 Cisco Systems, Inc.  All rights reserved.
+ * Copyright (c) 2007      Los Alamos National Security, LLC.  All rights
+ *                         reserved. 
+ * Copyright (c) 2006-2007 Cisco Systems, Inc.  All rights reserved.
  * $COPYRIGHT$
  * 
  * Additional copyrights may follow
@@ -108,6 +110,11 @@ OMPI_DECLSPEC extern bool ompi_mpi_paffinity_alone;
      */
 
     OMPI_DECLSPEC extern bool ompi_mpi_preconnect_all;
+
+    /**
+     * should we wireup the oob completely during MPI_INIT?
+     */
+    OMPI_DECLSPEC extern bool ompi_mpi_preconnect_oob;
 
     /**
      * Whether  MPI_ABORT  should  print  out an  identifying  message
